# Personal-website

./: README.md  index.html  netlify.toml  package.json  pyproject.toml  render.yaml  requirements.txt
